ExtensionInstallDialogView: Make scroll view and icon not overlap.

r411889 introduced scrolling with layers and gave the scroll view in
ExtensionInstallDialog an opaque background color. This caused the scroll view
to obscure the icon for the cases where the extension prompt has no webstore
data. This is because for this case, the scroll view and the icon view in the
ExtensionInstallDialogView overlap.

This CL fixes the regression by making the scroll view and icon view not overlap
for this case. The scroll view is extended to span the full content width and a
separator is added between the title and the scroll view if the prompt shows
permissions.

BUG=638093

Review-Url: https://codereview.chromium.org/2259723003
Cr-Commit-Position: refs/heads/master@{#414259}

Former-commit-id: 25c3b927b343fb3388eb3f2eacd85e21e60ba9b8